--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -3,48 +3,43 @@
 <html lang="en">
 <head>
 	<title>CopyPatrol</title>
+	<link href="{{ siteUrl('images/favicon.ico') }}" rel="shortcut icon" sizes="16x16 32x32"/>
 	{% block stylesheets %}
 		<link href="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css"
-		      rel="stylesheet"/>
+					rel="stylesheet"/>
 		<link href="{{ siteUrl('index.css') }}" type="text/css" rel="stylesheet"/>
 	{% endblock %}
 	{% block scripts %}
 		<script src="//tools-static.wmflabs.org/cdnjs/ajax/libs/jquery/1.12.0/jquery.min.js"
-		        type="text/javascript"></script>
+						type="text/javascript"></script>
 		<script src="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"
-		        type="text/javascript"></script>
+						type="text/javascript"></script>
 		<script src="{{ siteUrl('js/index.js') }}" type="text/javascript"></script>
 	{% endblock %}
 </head>
 <body>
+<header class="app-header">
+	<img src="{{ siteUrl( 'images/copypatrol.png' ) }}" />
+	<a class="header-link" target="_blank" href="https://meta.wikimedia.org/wiki/Talk:Community_Tech/Improve_the_plagiarism_detection_bot">Feedback</a>
+	<a class="header-link" target="_blank" href="https://github.com/Niharika29/PlagiabotWeb">Source</a>
+	{% if user %}
+		<a href="{{ urlFor( 'logout' ) }}" id="login-btn" class="btn btn-sm btn-default {{ user ? 'logged-in' : '' }}">
+			<span class=" glyphicon glyphicon-log-in"></span> Logout <br>
+			<small>You are logged in as {{ user.name }}</small>
+		</a>
+	{% else %}
+		<a href="{{ urlFor( 'oauth_init' ) }}" id="login-btn" class="btn btn-sm btn-default">
+			<span class=" glyphicon glyphicon-log-in"></span> Login
+		</a>
+	{% endif %}
+</header>
 <main id="body">
-	<section id="top-banner">
-		<h1>CopyPatrol</h1>
-		{% if user %}
-			<a href='{{ urlFor( 'logout' ) }}' id="login-btn" class="btn btn-sm btn-default">
-				<span class=" glyphicon glyphicon-log-in"></span> Logout <br>
-				<small>You are logged in as {{ user.name }}</small>
-			</a>
-		{% else %}
-			<a href='{{ urlFor( 'oauth_init' ) }}' id="login-btn" class="btn btn-sm btn-default">
-				<span class=" glyphicon glyphicon-log-in"></span> Login
-			</a>
-		{% endif %}
-	</section>
 	{% block banners %}
 		<section class="banners">
 			{% if staging %}
 				<div class="alert alert-danger text-center">
 					This is a staging environment. Please do not use this tool to record your reviews. For the actual
 					CopyPatrol tool, please use <a href="https://tools.wmflabs.org/copypatrol/">tools.wmflabs.org/copypatrol</a>.
-				</div>
-			{% else %}
-				<div class="alert alert-warning alert-dismissable">
-					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-					<strong>Hello!</strong> This is a web-version of Plagiabot. Database writes for this tool are <b>now
-						enabled</b>. You can start conducting reviews after you log in.
-					<a href="https://meta.wikimedia.org/wiki/Talk:Community_Tech/Improve_the_plagiarism_detection_bot">
-						You can drop your feedback here</a>.
 				</div>
 			{% endif %}
 			{% block flashes %}
@@ -116,5 +111,61 @@
 		</div>
 	</section>
 </main>
+<footer class="app-footer">
+	Brought to you by
+	<a target="_blank" href="https://meta.wikimedia.org/wiki/Community_Tech">Community Tech</a>
+	&bull;
+	Powered by
+	<a target="_blank" href="https://en.wikipedia.org/wiki/User:EranBot">EranBot</a>
+	and
+	<a target="_blank" href="https://en.wikipedia.org/wiki/Wikipedia:Turnitin">Turnitin</a>
+	&bull;
+	<a target="_blank" href="https://meta.wikimedia.org/wiki/Talk:Community Tech/Improve the plagiarism detection bot">Feedback</a>
+	&bull;
+	<a target="_blank" href="https://github.com/Niharika29/PlagiabotWeb">Source</a>
+	&bull;
+	<a target="_blank" href="https://phabricator.wikimedia.org/project/profile/1638">Phabricator</a>
+	&bull;
+	<a href="#" data-toggle="modal" data-target="#image-attribution">Image attribution</a>
+</footer>
+
+<!-- Modal -->
+<div class="modal fade" id="image-attribution" tabindex="-1" role="dialog" aria-labelledby="image-attribution-label">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<h4 class="modal-title" id="image-attribution-label">
+					Image attribution
+				</h4>
+			</div>
+			<div class="modal-body">
+				<p>
+					<a target="_blank" href="https://commons.wikimedia.org/wiki/File:Dialog-error-copyright.svg">CopyPatrol logo</a>
+					availalbe to the
+					<a target="_blank" href="https://en.wikipedia.org/wiki/Public_domain">public domain</a>
+					courtesy of
+					<a target="_blank" href="https://commons.wikimedia.org/wiki/User:Xander89">Xander89</a>
+					and the
+					<a target="_blank" href="http://tango.freedesktop.org/Tango_Desktop_Project">Tango Desktop Project</a>.
+				</p>
+				<p>
+					<a target="_blank" href="https://fonts.google.com/specimen/Bitter?query=bitter">Bitter font</a>
+					released under the
+					<a target="_blank" href="http://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&amp;id=OFL_web">Open Font License</a>
+					courtesy of
+					<a target="_blank" href="http://huertatipografica.com/">Huerta Tipográfica</a>.
+				</p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">
+					Close
+				</button>
+			</div>
+		</div>
+	</div>
+</div>
 </body>
 </html>
