--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -144,7 +144,7 @@
 			<div class="modal-body">
 				<p>
 					<a target="_blank" href="https://commons.wikimedia.org/wiki/File:Dialog-error-copyright.svg">CopyPatrol logo</a>
-					availalbe to the
+					available to the
 					<a target="_blank" href="https://en.wikipedia.org/wiki/Public_domain">public domain</a>
 					courtesy of
 					<a target="_blank" href="https://commons.wikimedia.org/wiki/User:Xander89">Xander89</a>
