--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -35,6 +35,12 @@
 						<small class="diff-div-timestamp">
 							<time datetime="{{ row.diff_timestamp }}">{{ row.diff_timestamp }}</time>
 						</small>
+						{% if row.oresScore is not empty %}
+						<br/>
+						<small class="diff-div-ores">
+							ORES score: {{ row.oresScore }}
+						</small>
+						{% endif %}
 					</div>
 					{# Div for editor information #}
 					<div class="row-div col-sm-2 text-center report-div">
@@ -67,11 +73,6 @@
 							{% for wp in row.wikiprojects %}
 								<span class="row-div wproject">{{ wp }}</span>
 							{% endfor %}
-						{% endif %}
-					</div>
-					<div class="row-div col-sm-2 text-center ores-div">
-						{% if row.oresScore is not empty %}
-							{{ row.oresScore }}
 						{% endif %}
 					</div>
 					<div class="row-div col-sm-2 text-center status-div">
