--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -3,6 +3,17 @@
 @import 'bootstrap/mixins/buttons.less';
 @import 'bootstrap/mixins/gradients.less';
 
+html {
+	// to make floating footer work
+	height: 100%;
+}
+
+body {
+	// to make floating footer work
+	min-height: 100%;
+	position: relative;
+}
+
 .loading-indic(@size: 20px) {
 	animation-duration: .75s;
 	animation-iteration-count: infinite;
@@ -229,7 +240,6 @@
 	white-space: normal;
 
 	h4 {
-		// -webkit-gradient(linear, 0 100%, 0 65%, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 1)))
 		#gradient.vertical(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0), 65%, 100%);
 		margin: 0;
 		padding-bottom: 12px;
@@ -257,7 +267,8 @@
 }
 
 #body {
-	padding: 12px;
+	// padding-bottom large enough to account for floating footer (and some additional spacing)
+	padding: 12px 12px 95px;
 }
 
 #login-btn {
@@ -287,12 +298,19 @@
 	vertical-align: -7px;
 }
 
+// absolutely positioned at the bottom to appear at the bottom
+//   if the content is less than the window size, otherwise it
+//   appears at the bottom of the document
 .app-footer {
 	background: url('images/gradient.png');
 	border-top: solid 2px #ccc;
+	bottom: 0;
+	left: 0;
 	margin-top: 30px;
 	padding: 15px;
+	position: absolute;
 	text-align: center;
+	width: 100%;
 }
 
 .status-div {
@@ -370,4 +388,43 @@ a[href=''] {
 
 .ithenticate-id {
 	display: none;
+}
+
+// Leaderboard-specific styling
+.leaderboard {
+	h1 {
+		margin-bottom: 40px;
+	}
+
+	h3 {
+		margin-bottom: 30px;
+		text-align: center;
+	}
+}
+
+.leaderboard-list {
+	font-size: 18px;
+	list-style-position: inside;
+	padding-left: 40px;
+	text-align: left;
+
+	li {
+		margin-top: 10px;
+	}
+
+	.mine {
+		font-weight: bold;
+	}
+}
+
+// the "Back to CopyPatrol" link seen on the Leaderboard page
+//   and possibly others moving forward
+.back-to-copypatrol {
+	left: 25px;
+	position: absolute;
+	top: 100px;
+
+	&:hover {
+		text-decoration: none;
+	}
 }
