refactoring to use Twig filter for number formatting
remove 'source' link from header since it's in the footer

--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -50,7 +50,7 @@
 									Contributions
 								</a>
 								{% if row.editcount %}
-									<div>Edit count: {{ row.editcount }}</div>
+									<div>Edit count: {{ row.editcount | number_format }}</div>
 								{% endif %}
 							</small>
 						{% else %}
