--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -22,10 +22,10 @@
 					{# Div for page title #}
 					<div class="row-div col-sm-3 page-div">
 						<strong>
-							<a href='{{ row.page_link }}' target="_blank">{{ row.page_title }}</a>
+							<a href='{{ row.page_link }}' target="_blank" class="{{ row.page_dead ? 'text-danger' : '' }}">{{ row.page_title }}</a>
 						</strong>
 						<div class="small">
-							<a href='{{ row.history_link }}' target="_blank">History</a>
+							<a href='{{ row.history_link }}' target="_blank" class="{{ row.page_dead ? 'text-danger' : '' }}">History</a>
 						</div>
 					</div>
 					{# Div for diff information and link #}
