--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -112,7 +112,8 @@ body {
 
 // fix bootstrap weirdness around radio buttons
 .filters-fieldset {
-	.radio-inline {
+	.radio-inline,
+	.checkbox-inline {
 		margin-left: 30px;
 		padding: 0;
 	}
