Show ORES scores only when it's more than ~43%

--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -38,7 +38,7 @@
 						{% if row.oresScore is not empty %}
 						<br/>
 						<small class="diff-div-ores">
-							ORES score: {{ row.oresScore }}
+							ORES score: {{ row.oresScore }}%
 						</small>
 						{% endif %}
 					</div>
