Adding link to ORES documentation

--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -38,7 +38,7 @@
 						{% if row.oresScore is not empty %}
 						<br/>
 						<small class="diff-div-ores">
-							ORES score: {{ row.oresScore }}%
+							<a href="https://meta.wikimedia.org/wiki/Objective_Revision_Evaluation_Service" target="_blank">ORES</a> score: {{ row.oresScore }}%
 						</small>
 						{% endif %}
 					</div>
