--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -8,6 +8,7 @@
 		<link href="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css"
 					rel="stylesheet"/>
 		<link href="{{ siteUrl( 'index.css' ) }}" type="text/css" rel="stylesheet"/>
+		<link href="{{ siteUrl( 'vendor/select2.min.css' ) }}" type="text/css" rel="stylesheet"/>
 	{% endblock %}
 	{% block scripts %}
 		<script src="//tools-static.wmflabs.org/cdnjs/ajax/libs/jquery/1.12.0/jquery.min.js"
@@ -15,6 +16,7 @@
 		<script src="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"
 						type="text/javascript"></script>
 		<script src="{{ siteUrl('js/index.js') }}" type="text/javascript"></script>
+		<script src="{{ siteUrl('vendor/select2.min.js') }}" type="text/javascript"></script>
 	{% endblock %}
 </head>
 <body>
@@ -75,25 +77,39 @@
 
 	{% block main %}
 		<section class="filters container-fluid">
-			<form>
+			<form id="filters-form">
 				<fieldset class="form-group filters-fieldset text-center">
-					{% for type, description in filterTypes %}
-						<span class="radio-inline">
+					<div class="cases-filter col-sm-12">
+						{% for type, description in filterTypes %}
+							<span class="radio-inline">
+								<label>
+									<input type="radio" name="filter" value="{{ type }}"
+										{% if filter == type %} checked="checked"{% endif %}
+									/> {{ description }}
+								</label>
+							</span>
+						{% endfor %}
+						<span class="checkbox-inline">
 							<label>
-								<input type="radio" name="filter" value="{{ type }}"
-									{% if filter == type %} checked="checked"{% endif %}
-								/> {{ description }}
+								<input type="checkbox" name="drafts" value="1"
+									{% if drafts %} checked="checked"{% endif %}
+								/> Drafts only
 							</label>
 						</span>
-					{% endfor %}
-					<span class="checkbox-inline">
-						<label>
-							<input type="checkbox" name="drafts" value="1"
-								{% if drafts %} checked="checked"{% endif %}
-							/> Drafts only
+					</div>
+					<div class="wikiproject-filter col-sm-12">
+						<label class="wikiproject-label" for="wikiproject-selector">
+							WikiProjects
 						</label>
-					</span>
-					<button type="submit" class="btn btn-primary btn-sm btn-submit-filters">Submit</button>
+						<select id="wikiproject-selector" class="wikiproject-selector col-sm-5" multiple="multiple">
+						{% for wikiproject in wikiprojectsArray %}
+							<option value="{{ wikiproject }}" selected="selected">{{ wikiproject }}</option>
+						{% endfor %}
+						</select>
+						{# use hidden input field so we can submit with format 'WP1|WP2|WP3' #}
+						<input type="hidden" name="wikiprojects" value="{{ wikiprojects }}" formenctype="text/plain" />
+						<button type="submit" class="btn btn-primary btn-sm btn-submit-filters">Submit</button>
+					</div>
 				</fieldset>
 			</form>
 		</section>
