--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -70,7 +70,7 @@ body {
 }
 
 .wproject {
-	background: #d0d0d0;
+	background: #f2f2f2;
 	border-radius: 10px;
 	display: inline-block;
 	font-size: 13px;
@@ -428,4 +428,20 @@ a[href=''] {
 	&:hover {
 		text-decoration: none;
 	}
+}
+
+.wikiproject-selector[multiple] {
+  display: block;
+  height: 34px;
+  min-width: 330px; // Select2 doesn't know how to resize properly on smaller screens
+}
+
+.wikiproject-label {
+  display: block;
+  margin-top: 10px;
+}
+
+.cases-filter {
+	margin-bottom: 10px;
+	padding-left: 5px; // to account for left-margin of the first child .radio-line
 }
