Add 'of edit' to clarify scores are of edit and not revision

--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -105,7 +105,7 @@
 									<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
 									Compare
 								</button>
-								{{ copy.percentage }} ({{ copy.count | number_format }} words)
+								{{ copy.percentage }} of edit ({{ copy.count | number_format }} words)
 								<a href="{{ copy.url }}" target="_blank">{{ copy.url }}</a><br/>
 								<div class="compare-pane" id="{{ 'comp' ~ row.ithenticate_id ~ '-' ~ loop.index }}">
 									<div class="compare-pane-left">
